--- a/PSD1.html
+++ b/PSD1.html
@@ -45,12 +45,14 @@
       </div>
 
     <div class="Colourize">
-
+<!-- HTML Video Tutorial https://youtu.be/Ki_0iES2cGI  -->
         <video controls>
             <source src="vid/Colorized Vintage Collage.mp4">
         </video>
 
     </div>
+<!-- HTML Video Tutorial https://youtu.be/Ki_0iES2cGI  -->
+
 
     <div class="info_header">
         <h2>Colourize Vintage Photos</h2>
