--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       </div>
 
     <!-- The slideshow section -->
+    <!-- Slideshow Tutorial https://www.youtube.com/watch?v=DpHi9Ruu8R4&t=183s -->
     <div class="slideshow-container">
         <div class="mySlides fade">
 
@@ -76,11 +77,12 @@
         <span class="dot" onclick="currentSlide(4)"></span>
 
     </div>
-
+<!-- Slideshow Tutorial https://www.youtube.com/watch?v=DpHi9Ruu8R4&t=183s -->
 
 
 
     <!-- Tutorials section -->
+    <!-- Website Image Slider Tutorial  https://www.youtube.com/watch?v=OQZNAMjC6Vg&list=LL&index=13&t=642s -->
     <section class="tutorial">
         <h2 class="tutorial-row">Photoshop</h2>
         <button class="pre-btn"><img src="img/arrow.png" alt=""></button>
@@ -112,6 +114,8 @@
                 </div>
 
             </div>
+    <!-- Website Image Slider Tutorial  https://www.youtube.com/watch?v=OQZNAMjC6Vg&list=LL&index=13&t=642s -->
+
 
             <div class="tutorial-card">
                 <div class="tutorial-image">
